Closed Bug 453206 Opened 17 years ago Closed 17 years ago

Uncaught exception when trying to force import of iCab 4 bookmarks as Safari bookmarks

Categories

(Camino Graveyard :: Bookmarks, defect)

All
macOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.21)

Attachments

(3 files, 1 obsolete file)

Attached file Crash log info
When playing around with bookmarks import today, I decided to see if iCab 4 had switched to the Safari bookmarks format. 1) Rename the iCab 4 Bookmarks file to Bookmarks.plist 2) Placed it in ~/Library/Safari 3) File: Import Bookmarks, select Safari AR: Importing started, then *poof* ER: No crash Attached is the exception info from the console, the exception info from the crash report, and the crashing thread; the branch crash log is similar.
Attachment #336399 - Attachment mime type: application/xml → text/plain
Attachment #336399 - Attachment mime type: text/plain → text/plain; content-encoding:x-gzip
Comment on attachment 336399 [details] iCab 4 default bookmarks, renamed Bookmarks.plist for crashing convenience I give up; I don't know how to make Bugzilla recognize a binary plist.
Attachment #336399 - Attachment mime type: text/plain; content-encoding:x-gzip → application/octet-stream
Zip it and upload the zip?
Hardware: Macintosh → All
Attached patch fix (obsolete) — Splinter Review
Bail when we encounter an iCab bookmark file, rather than throwing an exception.
Assignee: nobody → stuart.morgan+bugzilla
Attachment #349610 - Flags: superreview?(mikepinkerton)
No reason not to land this for 1.6.6 as well.
Flags: camino1.6.6+
(Tweaking bug since it's not a crash any more due to the core changes.)
Severity: critical → major
Keywords: crash
Summary: crash due to uncaught exception when trying to force import of iCab 4 bookmarks as Safari bookmarks → Uncaught exception when trying to force import of iCab 4 bookmarks as Safari bookmarks
Comment on attachment 349610 [details] [diff] [review] fix >+ // iCab has the same key, but with a string value. Bail if we hit that case, >+ // since we don't support iCab bookmark import. Do you want to indicate that it's iCab 4/iCab >3 here, since iCab 1-3 don't have this problem, and we do support import of those bookmarks?
Attached patch with versionSplinter Review
Sorry, I forgot that iCab 1-3 was HTML and thus supported for free.
Attachment #349622 - Flags: superreview?(mikepinkerton)
Attachment #349610 - Attachment is obsolete: true
Attachment #349610 - Flags: superreview?(mikepinkerton)
Comment on attachment 349622 [details] [diff] [review] with version sr=pink
Attachment #349622 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → Camino2.0
Landed on the MOZILLA_1_8_BRANCH in advance of 1.6.6; I'd forgotten all about this one :(
Keywords: fixed1.8.1.20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: