Camino only - Bug 453206: Don't throw an exception when trying to read an iCab 4 bookmark file. sr=pink